[package]
name = "arcswap-vs-leftright"
version = "0.1.0"
edition = "2021"

[dependencies]
left-right = "0.11.5"
arc-swap = "1.7.1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
tokio = { version = "1.40", features = ["full"] }

[[bench]]
name = "comparison"
harness = false